<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title for the Data Display screen -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textSize="16sp"
        android:textColor="#000" />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="16sp"
        android:textColor="#000" />

    <TextView
        android:id="@+id/page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page"
        android:textSize="16sp"
        android:textColor="#000" />
    <TextView
        android:id="@+id/api_key_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_key"
        android:textSize="16sp"
        android:textColor="#000" />

    <!-- RecyclerView to display list of data -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
</LinearLayout>


